[gd_scene load_steps=16 format=3 uid="uid://cbt73akmakrxo"]

[ext_resource type="Texture2D" uid="uid://d0ppjnj7yctfe" path="res://assets/environment/props/Turret/Head.png" id="1_687li"]
[ext_resource type="Script" path="res://src/Towers/TowerTemplate.gd" id="1_tb706"]
[ext_resource type="Texture2D" uid="uid://br3my7omhd18e" path="res://assets/environment/props/Turret/Base.png" id="2_fanxn"]
[ext_resource type="AudioStream" uid="uid://bgpjwmhjtskp1" path="res://assets/audio/SFX/TurretShoot.wav" id="4_3eb1i"]
[ext_resource type="Texture2D" uid="uid://rhluw4rkk2vp" path="res://assets/environment/props/Icons/Battery.png" id="4_sifvw"]
[ext_resource type="AudioStream" uid="uid://bmnjr2huxnhod" path="res://assets/audio/SFX/TowerEnabled.wav" id="5_ehhk2"]
[ext_resource type="Texture2D" uid="uid://dopl00nhd0d56" path="res://assets/environment/props/Icons/hEALTH.png" id="5_pcv0i"]

[sub_resource type="Animation" id="Animation_bhljl"]
resource_name = "Death"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Head:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6, 2.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0121474, 7.85398, 6.28319]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Head:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.6, 1.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(175.938, 114.489), Vector2(148, 962)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../CPUParticles2D:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../SmokeParticles:emitting")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.8, 4.9),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_8mn0y"]
resource_name = "Hit"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_o5if3"]
resource_name = "Shot"
length = 0.08
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Head:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.04, 0.08),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(175.938, 114.489), Vector2(190, 114.489), Vector2(175.938, 114.489)]
}

[sub_resource type="Animation" id="Animation_8wg33"]
resource_name = "WaveToExit"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../CanvasLayer/UIText:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Complete 	The Wave to exit !"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../CanvasLayer/UIText:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_e4qfa"]
_data = {
"Death": SubResource("Animation_bhljl"),
"Hit": SubResource("Animation_8mn0y"),
"Shot": SubResource("Animation_o5if3"),
"WaveToExit": SubResource("Animation_8wg33")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pub82"]
size = Vector2(547, 297)

[sub_resource type="Gradient" id="Gradient_uahsc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wgsb8"]
size = Vector2(65.5, 722)

[node name="Tower1" type="Area2D" groups=["Dammagable", "Tower"]]
texture_filter = 1
script = ExtResource("1_tb706")
batteryPerShot = 10

[node name="Collider" type="CollisionPolygon2D" parent="."]
visible = false
position = Vector2(-1, 2)
polygon = PackedVector2Array(3, 306, 4, 288, 50, 289, 51, 258, 67, 257, 66, 224, 82, 224, 83, 193, 99, 194, 100, 146, 83, 145, 83, 127, 83, 122, 75, 122, 74, 116, 65, 114, 66, 121, 38, 122, 38, 114, -16, 113, -16, 95, -7, 95, -7, 87, 27, 86, 30, 76, 48, 77, 47, 68, 84, 68, 110, 68, 110, 60, 120, 59, 119, 51, 111, 50, 111, 33, 118, 33, 120, 24, 129, 15, 146, 6, 227, 6, 236, 15, 245, 24, 246, 41, 237, 50, 236, 95, 227, 114, 210, 114, 196, 129, 226, 129, 227, 145, 211, 145, 212, 161, 195, 161, 195, 191, 227, 193, 228, 209, 243, 209, 242, 240, 228, 241, 227, 289, 275, 289, 275, 305)

[node name="Graphics" type="Node2D" parent="."]

[node name="Head" type="Sprite2D" parent="Graphics"]
z_index = 1
texture_filter = 1
position = Vector2(175.938, 114.489)
scale = Vector2(9, 9)
texture = ExtResource("1_687li")
offset = Vector2(-6.29706, -3.11443)

[node name="Spawner" type="Marker2D" parent="Graphics/Head"]
position = Vector2(-6.80022, -1.80642)
rotation = -0.0121474
scale = Vector2(0.111111, 0.111111)

[node name="VSlider" type="VSlider" parent="Graphics/Head"]
modulate = Color(0, 1, 0.309804, 1)
z_index = 1
offset_left = -0.565054
offset_top = -10.4927
offset_right = 63.4349
offset_bottom = 60.5073
scale = Vector2(0.128636, 0.127237)
theme_override_constants/center_grabber = 100
metadata/_edit_use_anchors_ = true

[node name="Base" type="Sprite2D" parent="Graphics"]
position = Vector2(99, 49)
texture = ExtResource("2_fanxn")

[node name="Base2" type="Sprite2D" parent="Graphics"]
position = Vector2(99, 49)
texture = ExtResource("2_fanxn")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Graphics"]
libraries = {
"": SubResource("AnimationLibrary_e4qfa")
}

[node name="Range" type="Area2D" parent="."]

[node name="Collider" type="CollisionShape2D" parent="Range"]
position = Vector2(-170.5, 155)
shape = SubResource("RectangleShape2D_pub82")

[node name="ShootRate" type="Timer" parent="."]
wait_time = 1.2
autostart = true

[node name="TextPopUp" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ColorRect" type="ColorRect" parent="TextPopUp"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 66.0
offset_top = -74.0
offset_right = 223.0
offset_bottom = -49.0
grow_horizontal = 2
grow_vertical = 0
color = Color(0.572549, 0.168627, 0.0823529, 1)

[node name="RichTextLabel" type="RichTextLabel" parent="TextPopUp"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 92.0
offset_top = -75.0
offset_right = 280.0
offset_bottom = -35.0
grow_horizontal = 2
grow_vertical = 0
text = "E to Enable"

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
position = Vector2(181, 9)
emitting = false
amount = 32
one_shot = true
emission_shape = 1
emission_sphere_radius = 82.97
particle_flag_align_y = true
direction = Vector2(0, -1)
gravity = Vector2(0, 150)
initial_velocity_max = 10.1
angle_max = 174.5
scale_amount_min = 0.0
scale_amount_max = 37.14
color = Color(1, 1, 0.721569, 1)
color_initial_ramp = SubResource("Gradient_uahsc")
hue_variation_min = -1.0
hue_variation_max = 0.97

[node name="SmokeParticles" type="CPUParticles2D" parent="."]
position = Vector2(149, 146)
emitting = false
amount = 32
lifetime = 2.0
emission_shape = 1
emission_sphere_radius = 20.91
particle_flag_align_y = true
direction = Vector2(0, -1)
gravity = Vector2(0, 10)
initial_velocity_max = 281.13
angle_max = 174.5
scale_amount_min = 0.0
scale_amount_max = 37.14
color_initial_ramp = SubResource("Gradient_uahsc")
hue_variation_min = -1.0
hue_variation_max = 0.97

[node name="ShootEffect" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_3eb1i")
bus = &"SFX"

[node name="EnabledEffect" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_ehhk2")
bus = &"SFX"

[node name="Battery" type="ProgressBar" parent="."]
offset_left = 84.0
offset_top = -67.0
offset_right = 240.0
offset_bottom = -40.0

[node name="Battery" type="Sprite2D" parent="Battery"]
position = Vector2(5, 13)
scale = Vector2(0.237288, 0.241667)
texture = ExtResource("4_sifvw")

[node name="Health" type="ProgressBar" parent="."]
offset_left = 83.0
offset_top = -102.0
offset_right = 239.0
offset_bottom = -75.0

[node name="HEalth" type="Sprite2D" parent="Health"]
position = Vector2(15, 13)
rotation = 0.445425
scale = Vector2(0.35, 0.35)
texture = ExtResource("5_pcv0i")

[node name="Border" type="StaticBody2D" parent="."]
position = Vector2(-9, 76)
scale = Vector2(1.0231, 0.751005)

[node name="Collider" type="CollisionShape2D" parent="Border"]
position = Vector2(677, -55)
shape = SubResource("RectangleShape2D_wgsb8")

[node name="PlayerDetector" type="Area2D" parent="Border"]

[node name="Collider" type="CollisionShape2D" parent="Border/PlayerDetector"]
position = Vector2(671.75, -55)
shape = SubResource("RectangleShape2D_wgsb8")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UIText" type="RichTextLabel" parent="CanvasLayer"]
self_modulate = Color(1, 1, 1, 0)
offset_left = 182.0
offset_top = 268.0
offset_right = 1026.0
offset_bottom = 491.0
theme_override_font_sizes/normal_font_size = 50
text = "Complete 	The Wave to exit !"

[connection signal="body_entered" from="Range" to="." method="_on_range_body_entered"]
[connection signal="body_exited" from="Range" to="." method="_on_range_body_exited"]
[connection signal="timeout" from="ShootRate" to="." method="_on_shoot_rate_timeout"]
[connection signal="body_entered" from="Border/PlayerDetector" to="." method="_on_player_detector_body_entered"]
